# ART

./: .gitignore  ART.pro  CMakeLists.txt  Doxyfile  README.md  app_pl.qm  app_pl.ts  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
